--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <title>Super Psychic Letter Guessing Game</title>
+
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
@@ -18,7 +21,6 @@
     <link href="https://fonts.googleapis.com/css?family=Gloria+Hallelujah|Indie+Flower|Permanent+Marker&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
-    <script src="assets/javascript/game.js" async>    </script>
 
 </head>
 
@@ -41,22 +43,22 @@
                         </div>
                         <div class="row">
                             <div class="col-12">
-                                <h2 class="h2">Wins: </h2>
+                                <h2 class="h2">Wins: <span id="wins"></span></h2>
                             </div>
                         </div>
                         <div class="row">
                             <div class="col-12">
-                                <h2 class="h2">Losses: </h2>
+                                <h2 class="h2">Losses: <span id="losses"></span></h2>
                             </div>
                         </div>
                         <div class="row">
                             <div class="col-12">
-                                <h2 class="h2">Guesses Remaining: </h2>
+                                <h2 class="h2">Guesses Remaining: <span id="remaining"></span></h2>
                             </div>
                         </div>
                         <div class="row">
                             <div class="col-12">
-                                <h2 class="h2">Your Guesses So Far: </h2>
+                                <h2 class="h2">Your Guesses So Far: <span id="userGuess"></span></h2>
                             </div>
                         </div>
                     </div>
@@ -64,6 +66,8 @@
             </div>
         </div>
     </div>
+
+    <script src="assets/javascript/game.js" async>    </script>
 
 </body>
 
