added an image file that compliments the theme of the game; added css styling to text(color, size); shortened the length of the text in the index.html file

--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@
                     <div class="container">
                         <div class="row">
                             <div class="col-12">
-                                <h1 class="h1">PSYCHIC GAME</h1>
+                                <h1 class="h1">PSYCHIC LETTER GAME</h1>
                             </div>
                         </div>
                         <div class="row">
                             <div class="col-12">
-                                <p class="p">Guess what letter I am thinking of: </p>
+                                <p class="p">Guess my letter... </p>
                             </div>
                         </div>
                         <div class="row">
@@ -53,12 +53,12 @@
                         </div>
                         <div class="row">
                             <div class="col-12">
-                                <h2 class="h2">Guesses Remaining: <span id="remaining"></span></h2>
+                                <h2 class="h2">Guesses left: <span id="remaining"></span></h2>
                             </div>
                         </div>
                         <div class="row">
                             <div class="col-12">
-                                <h2 class="h2">Your Guesses So Far: <span id="userGuess"></span></h2>
+                                <h2 class="h2">Your Guesses: <span id="userGuess"></span></h2>
                             </div>
                         </div>
                     </div>
@@ -67,7 +67,7 @@
         </div>
     </div>
 
-    <script src="assets/javascript/game.js" async>    </script>
+    <script src="assets/javascript/game.js" async> </script>
 
 </body>
 
